[tool.poetry]
name = "poc"
version = "0.1.0"
description = ""
authors = ["e-candeloro <candeloroettore@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
dash = "^2.18.2"
scikit-learn = "^1.5.2"
dash-bootstrap-components = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
